--- a/1.Basic/Note/02.변수와 자료형.ipynb
+++ b/1.Basic/Note/02.변수와 자료형.ipynb
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Volumes/Data/eicas/Python/1.Basic/Note/02.변수와 자료형.ipynb Cell 21'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Volumes/Data/eicas/Python/1.Basic/Note/02.%EB%B3%80%EC%88%98%EC%99%80%20%EC%9E%90%EB%A3%8C%ED%98%95.ipynb#ch0000033?line=0'>1</a>\u001b[0m var01\n",
+      "\u001b[1;32m/Volumes/Data/eicas/Python/1.Basic/Note/02.변수와 자료형.ipynb Cell 21'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Volumes/Data/eicas/Python/1.Basic/Note/02.%EB%B3%80%EC%88%98%EC%99%80%20%EC%9E%90%EB%A3%8C%ED%98%95.ipynb#ch0000020?line=0'>1</a>\u001b[0m var01\n",
       "\u001b[0;31mNameError\u001b[0m: name 'var01' is not defined"
      ]
     }
@@ -572,7 +572,7 @@
    ],
    "source": [
     "# 부정 연산자\n",
-    "not(num1 >= 50)"
+    "not(num1 >= 50) # ! 이 아님"
    ]
   },
   {
