[update] 2022/06/27 6/27학습내용 업로드

--- a/2.Scrapy/Note/04.BeautifulSoup로 스크레이핑하기.ipynb
+++ b/2.Scrapy/Note/04.BeautifulSoup로 스크레이핑하기.ipynb
@@ -7321,11 +7321,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "# 다음 IT News 많이 본 뉴스"
+   ]
   },
   {
    "cell_type": "code",
@@ -7333,15 +7334,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "# https://media.daum.net/digital/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Libarary\n",
+    "from bs4 import BeautifulSoup\n",
+    "import urllib.request as req\n",
+    "\n",
+    "# Site Address\n",
+    "url = \"https://media.daum.net/digital/\"\n",
+    "\n",
+    "# urlOpen\n",
+    "res = req.urlopen(url)\n",
+    "\n",
+    "# BeautifulSoup으로 분석하기\n",
+    "soup = BeautifulSoup(res, \"html.parser\")\n",
+    "# print(soup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"애플, 올 가을·내년 신제품 쏟아낼 것..M3칩도 준비\"\n",
+      "우버택시보다 싼 무인 로보택시가 영업을 시작했다\n",
+      "개인정보보호 침해 사례, 최근 4년 새 2배 이상 급증\n",
+      "로켓 높이만 98m, 달 향해 섰다..美 NASA 발사 전 점검완료[우주다방]\n",
+      "구글, 美 낙태권 폐기 판결에 근무지 자유 이전 허용\n",
+      "애플 MR 헤드셋에 'M2 칩' 탑재되나\n",
+      "\"아이폰14 프로 AOD, 새 잠금화면 위젯 지원\"\n",
+      "6월에 출시한 디아블로 이모탈-우마무스메-미르M, 3개 작품의 인기 비결은?\n",
+      "화웨이, '100W 터보' 고속 충전 기술 탑재 폰 곧 공개\n",
+      "中 손목용 웨어러블 시장서 애플만 '나홀로' 성장\n",
+      "비트코인 팔아치우는 채굴자들..\"바닥 가까워졌다는 신호?\"\n",
+      "[단독]'각 세종'까지 찾았다..네이버 이해진의 남다른 '자국 데이터' 집념\n",
+      "[생활속 과학이야기]  달에 대한 상상과 우주탐사\n",
+      "\"죽음 두려워요\"..감정 AI 논쟁에 숨어든 빅테크의 속임수\n",
+      "카겜즈, 오딘-우마 '원투펀치' 완성..남궁훈도 인정한 조계현 대표의 '안목'\n",
+      "폭락장에 상장 나선 쏘카..창업주 이재웅 \"최소 1년간 주식 안판다\"\n",
+      "'흥행은 따논 당상' 2022 지스타 역대급 성공 예고\n",
+      "\"아파트 담보 잡아 2년 버텼지만 50억 빚만 남았다\"\n",
+      "항균나노패치가 피부에 착 붙어 감염 막는다\n",
+      "디지털 대전환 시대, 新개인정보정책 패러다임\n",
+      "반도체 미래, '팹리스 인재'에 달려.. 문과생도 전문가로 클 수 있다\n",
+      "1년 과정의 '마이크로 학위'로 반도체 인력 양성하자\n",
+      "페이센스가 놓친 것\n",
+      "우주로 비상한 '누리호'..게임계 질주하는 '우마무스메'\n",
+      "이벤트38, 수소 연료 무인기로 6시간 비행\n",
+      "Kakao Corp.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#body > div.container-doc.cont-category > main > section > div.main-sub > div.box_g.box_news_major > ul > li:nth-child(1) > strong > a\n",
+    "it_news = soup.select(\"strong > a\")\n",
+    "\n",
+    "for it in it_news:\n",
+    "    print(it.string)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
