[update] 2022/07/07 학습내용 업로드

--- a/2.Scrapy/Note/etc.프렌차이즈 매장정보.ipynb
+++ b/2.Scrapy/Note/etc.프렌차이즈 매장정보.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,8 @@
       "[WDM] - ====== WebDriver manager ======\n",
       "[WDM] - Current google-chrome version is 103.0.5060\n",
       "[WDM] - Get LATEST chromedriver version for 103.0.5060 google-chrome\n",
-      "[WDM] - Driver [/Users/tj/.wdm/drivers/chromedriver/mac64/103.0.5060.53/chromedriver] found in cache\n"
+      "[WDM] - About to download new driver from https://chromedriver.storage.googleapis.com/103.0.5060.53/chromedriver_mac64.zip\n",
+      "[WDM] - Driver has been saved in cache [/Users/tj/.wdm/drivers/chromedriver/mac64/103.0.5060.53]\n"
      ]
     }
    ],
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +99,7 @@
        " '충북']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +161,7 @@
       "<meta content=\"배스킨라빈스\" name=\"author\"/>\n",
       "<meta content=\"baskinrobbins, br31, 배스킨라빈스, 배라, 베라\" name=\"keywords\"/>\n",
       "<meta content=\"행복을 전하는 프리미엄 아이스크림, 배스킨라빈스 공식 홈페이지 입니다.\" name=\"description\"/>\n",
-      "<meta content=\"fb_url?dummy=1656317105\" name=\"generator\"/>\n",
+      "<meta content=\"fb_url?dummy=1657186781\" name=\"generator\"/>\n",
       "<meta content=\"[배스킨라빈스]\" property=\"og:title\"/>\n",
       "<meta content=\"행복을 전하는 프리미엄 아이스크림, 배스킨라빈스 공식 홈페이지 입니다.\" property=\"og:description\"/>\n",
       "<meta content=\"http://www.baskinrobbins.co.kr\" property=\"og:url\"/>\n",
@@ -172,13 +173,13 @@
       "<!-- <link rel=\"stylesheet\" href=\"//cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css\"> -->\n",
       "<link href=\"//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css\" rel=\"stylesheet\"/>\n",
       "<link href=\"/assets/css/baskinrobbins.css?v=20220429\" rel=\"stylesheet\"/>\n",
-      "<script async=\"\" src=\"https://www.google-analytics.com/analytics.js\" type=\"text/javascript\"></script><script async=\"\" src=\"https://connect.facebook.net/signals/config/926241157723258?v=2.9.62&amp;r=stable\"></script><script async=\"\" src=\"https://connect.facebook.net/en_US/fbevents.js\"></script><script async=\"\" src=\"https://www.googleadservices.com/pagead/conversion_async.js\" type=\"text/javascript\"></script><script async=\"\" src=\"https://www.googletagmanager.com/gtm.js?id=GTM-WWX8QVK\"></script><script src=\"//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js\"></script>\n",
+      "<script async=\"\" src=\"https://connect.facebook.net/signals/config/926241157723258?v=2.9.64&amp;r=stable\"></script><script async=\"\" src=\"https://connect.facebook.net/en_US/fbevents.js\"></script><script async=\"\" src=\"https://www.googleadservices.com/pagead/conversion_async.js\" type=\"text/javascript\"></script><script async=\"\" src=\"https://www.google-analytics.com/analytics.js\" type=\"text/javascript\"></script><script async=\"\" src=\"https://www.googletagmanager.com/gtm.js?id=GTM-WWX8QVK\"></script><script src=\"//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js\"></script>\n",
       "<!-- responsive img map -->\n",
       "<script src=\"/assets/js/jquery.rwdImageMaps.js\"></script>\n",
       "<!--[if lt IE 9]>\n",
       "\t<script src=\"//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js\"></script>\n",
       "\t<link rel=\"stylesheet\" href=\"/assets/css/baskinrobbins_ie.css\">\n",
-      "<![endif]--><meta content=\"A9wkrvp9y21k30U9lU7MJMjBj4USjLrGwV+Z8zO3J3ZBH139DOnCv3XLK2Ii40S94HG1SZ/Zeg2GSHOD3wlWngYAAAB7eyJvcmlnaW4iOiJodHRwczovL3d3dy5nb29nbGV0YWdtYW5hZ2VyLmNvbTo0NDMiLCJmZWF0dXJlIjoiUHJpdmFjeVNhbmRib3hBZHNBUElzIiwiZXhwaXJ5IjoxNjYxMjk5MTk5LCJpc1RoaXJkUGFydHkiOnRydWV9\" http-equiv=\"origin-trial\"/><script src=\"https://googleads.g.doubleclick.net/pagead/viewthroughconversion/698229255/?random=1656317112656&amp;cv=9&amp;fst=1656317112656&amp;num=1&amp;bg=ffffff&amp;guid=ON&amp;resp=GooglemKTybQhCsO&amp;u_h=1152&amp;u_w=2048&amp;u_ah=1033&amp;u_aw=2048&amp;u_cd=30&amp;u_his=3&amp;u_tz=540&amp;u_java=false&amp;u_nplug=5&amp;u_nmime=2&amp;gtm=2wg6m0&amp;sendb=1&amp;ig=1&amp;frm=0&amp;url=http%3A%2F%2Fwww.baskinrobbins.co.kr%2Fstore%2Fmap.php&amp;ref=http%3A%2F%2Fwww.baskinrobbins.co.kr%2F&amp;tiba=%EB%B0%B0%EC%8A%A4%ED%82%A8%EB%9D%BC%EB%B9%88%EC%8A%A4&amp;hn=www.googleadservices.com&amp;async=1&amp;rfmt=3&amp;fmt=4\"></script></head>\n",
+      "<![endif]--><meta content=\"A9wkrvp9y21k30U9lU7MJMjBj4USjLrGwV+Z8zO3J3ZBH139DOnCv3XLK2Ii40S94HG1SZ/Zeg2GSHOD3wlWngYAAAB7eyJvcmlnaW4iOiJodHRwczovL3d3dy5nb29nbGV0YWdtYW5hZ2VyLmNvbTo0NDMiLCJmZWF0dXJlIjoiUHJpdmFjeVNhbmRib3hBZHNBUElzIiwiZXhwaXJ5IjoxNjYxMjk5MTk5LCJpc1RoaXJkUGFydHkiOnRydWV9\" http-equiv=\"origin-trial\"/><script async=\"\" src=\"https://googleads.g.doubleclick.net/pagead/viewthroughconversion/698229255/?random=1657186799576&amp;cv=9&amp;fst=1657186799576&amp;num=1&amp;bg=ffffff&amp;guid=ON&amp;resp=GooglemKTybQhCsO&amp;u_h=1152&amp;u_w=2048&amp;u_ah=1033&amp;u_aw=2048&amp;u_cd=30&amp;u_his=3&amp;u_tz=540&amp;u_java=false&amp;u_nplug=5&amp;u_nmime=2&amp;gtm=2wg6t0&amp;sendb=1&amp;ig=1&amp;frm=0&amp;url=http%3A%2F%2Fwww.baskinrobbins.co.kr%2Fstore%2Fmap.php&amp;ref=http%3A%2F%2Fwww.baskinrobbins.co.kr%2F&amp;tiba=%EB%B0%B0%EC%8A%A4%ED%82%A8%EB%9D%BC%EB%B9%88%EC%8A%A4&amp;hn=www.googleadservices.com&amp;async=1&amp;rfmt=3&amp;fmt=4\" type=\"text/javascript\"></script></head>\n",
       "<body id=\"br_store\">\n",
       "<article class=\"br_store_map\" id=\"wrap\">\n",
       "<!-- haeder -->\n",
@@ -271,7 +272,7 @@
       "</div>\n",
       "<div class=\"gnb_sub\">\n",
       "<!-- 이달의 플레이버 배너! -->\n",
-      "<a href=\"/menu/fom.php\"><img alt=\"\" src=\"/assets/images/common/flavor/img_monthly_fom_220531.png\" style=\"margin-left:37px;\"/></a>\n",
+      "<a href=\"/menu/fom.php\"><img alt=\"\" src=\"/assets/images/common/flavor/img_monthly_fom_220630.png\" style=\"margin-left:37px; margin-top:27px;\"/></a>\n",
       "</div>\n",
       "</li>\n",
       "<!-- <li class=\"gnb_depth1 gnb_christmas\">\n",
@@ -490,10 +491,8 @@
       "<dl>\n",
       "<dt>자주 찾는 해시태그</dt>\n",
       "<dd>\n",
-      "<a href=\"#\">#너로정했다이브이</a>\n",
-      "<a href=\"#\">#이상해씨멜론블라스트</a>\n",
-      "<a href=\"#\">#푸린피치블라스트</a>\n",
-      "<a href=\"#\">#포켓몬더블쿠키샌드</a>\n",
+      "<a href=\"#\">#마우나로아마카다미아</a>\n",
+      "<a href=\"#\">#마우나로아마카다미아블라스트</a>\n",
       "</dd>\n",
       "</dl>\n",
       "</div>\n",
@@ -667,18 +666,6 @@
       "</dl>\n",
       "<dl>\n",
       "<dt>이벤트</dt>\n",
-      "<dd>\n",
-      "<label>\n",
-      "<input id=\"ScEvent_11144\" name=\"ScEvent[]\" type=\"checkbox\" value=\"11144\"/>\n",
-      "<span>포켓몬 키즈우산 쿼터이상 구매시 2,900원!</span>\n",
-      "</label>\n",
-      "</dd>\n",
-      "<dd>\n",
-      "<label>\n",
-      "<input id=\"ScEvent_11124\" name=\"ScEvent[]\" type=\"checkbox\" value=\"11124\"/>\n",
-      "<span>배스킨라빈스X멜론, 쿼터 이상 구매시 멜론 쿨러백 5,900원</span>\n",
-      "</label>\n",
-      "</dd>\n",
       "<dd>\n",
       "<label>\n",
       "<input id=\"ScEvent_10824\" name=\"ScEvent[]\" type=\"checkbox\" value=\"10824\"/>\n",
@@ -2429,25 +2416,9 @@
       "<h3 class=\"title\">매장 프로모션</h3>\n",
       "<div class=\"event_list\" data-api=\"slide\">\n",
       "<div class=\"swipe\" style=\"visibility: visible;\">\n",
-      "<div class=\"swipe_wrap\" style=\"width: 5496px;\">\n",
+      "<div class=\"swipe_wrap\" style=\"width: 3664px;\">\n",
       "<div class=\"list_product\" data-index=\"0\" style=\"width: 916px; left: 0px; transition-duration: 0ms; transform: translate(0px, 0px) translateZ(0px);\">\n",
       "<ul>\n",
-      "<li>\n",
-      "<a href=\"/event/view.php?flag=A&amp;seq=11144\">\n",
-      "<figure><img alt=\"\" src=\"/upload/event/image/1709708283.png\"/></figure>\n",
-      "<span class=\"type\"><img alt=\"STORE EVENT\" src=\"/assets/images/event/stit_store.gif\"/></span>\n",
-      "<span class=\"title\">포켓몬 키즈우산 쿼터이상 구매시 2,900원!</span>\n",
-      "<span class=\"period\">2022.06.27 ~ 소진 시까지</span>\n",
-      "</a>\n",
-      "</li>\n",
-      "<li>\n",
-      "<a href=\"/event/view.php?flag=A&amp;seq=11124\">\n",
-      "<figure><img alt=\"\" src=\"/upload/event/image/1701823799.jpg\"/></figure>\n",
-      "<span class=\"type\"><img alt=\"STORE EVENT\" src=\"/assets/images/event/stit_store.gif\"/></span>\n",
-      "<span class=\"title\">배스킨라빈스X멜론, 쿼터 이상 구매시 멜론 쿨러백 5,900원</span>\n",
-      "<span class=\"period\">2022.06.24 ~ 소진 시까지</span>\n",
-      "</a>\n",
-      "</li>\n",
       "<li>\n",
       "<a href=\"/event/view.php?flag=A&amp;seq=10824\">\n",
       "<figure><img alt=\"\" src=\"/upload/event/image/1685932709.png\"/></figure>\n",
@@ -2456,10 +2427,6 @@
       "<span class=\"period\">상시진행</span>\n",
       "</a>\n",
       "</li>\n",
-      "</ul>\n",
-      "</div>\n",
-      "<div class=\"list_product\" data-index=\"1\" style=\"width: 916px; left: -916px; transition-duration: 0ms; transform: translate(916px, 0px) translateZ(0px);\">\n",
-      "<ul>\n",
       "<li>\n",
       "<a href=\"/event/view.php?flag=A&amp;seq=10344\">\n",
       "<figure><img alt=\"\" src=\"/upload/event/image/1667440386.png\"/></figure>\n",
@@ -2476,6 +2443,10 @@
       "<span class=\"period\">상시진행</span>\n",
       "</a>\n",
       "</li>\n",
+      "</ul>\n",
+      "</div>\n",
+      "<div class=\"list_product\" data-index=\"1\" style=\"width: 916px; left: -916px; transition-duration: 0ms; transform: translate(916px, 0px) translateZ(0px);\">\n",
+      "<ul>\n",
       "<li>\n",
       "<a href=\"/event/view.php?flag=A&amp;seq=8624\">\n",
       "<figure><img alt=\"\" src=\"/upload/event/image/1643869329.png\"/></figure>\n",
@@ -2484,10 +2455,6 @@
       "<span class=\"period\">상시진행</span>\n",
       "</a>\n",
       "</li>\n",
-      "</ul>\n",
-      "</div>\n",
-      "<div class=\"list_product\" data-index=\"2\" style=\"width: 916px; left: -1832px; transition-duration: 0ms; transform: translate(916px, 0px) translateZ(0px);\">\n",
-      "<ul>\n",
       "<li>\n",
       "<a href=\"/event/view.php?flag=A&amp;seq=10104\">\n",
       "<figure><img alt=\"\" src=\"/upload/event/image/1667382917.png\"/></figure>\n",
@@ -2510,7 +2477,7 @@
       "</div>\n",
       "<div class=\"dslide\">\n",
       "<!-- paging -->\n",
-      "<a class=\"active\" href=\"#none\">1<span></span></a><a href=\"#none\">2<span></span></a><a href=\"#none\">3<span></span></a></div>\n",
+      "<a class=\"active\" href=\"#none\">1<span></span></a><a href=\"#none\">2<span></span></a></div>\n",
       "</div>\n",
       "</section>\n",
       "<!-- footer -->\n",
@@ -2518,35 +2485,42 @@
       "<div class=\"inner_footer\">\n",
       "<nav class=\"policy\">\n",
       "<ul>\n",
-      "<li style=\"width:12%;\">\n",
+      "<li style=\"width:10%;\">\n",
       "<a href=\"/about/br_system.php\">\n",
       "\t\t\t\t\t\t점포개설문의\n",
       "\t\t\t\t\t</a>\n",
       "</li>\n",
-      "<li style=\"width:12%;\">\n",
+      "<li style=\"width:9%;\">\n",
       "<a href=\"/about/jobs.php\">\n",
       "\t\t\t\t\t\t채용문의\n",
       "\t\t\t\t\t</a>\n",
       "</li>\n",
-      "<li style=\"width:12%;\">\n",
-      "<a href=\"https://www.spc.co.kr/csr/right-mng/spc-operation/\" target=\"_blank\">윤리신고센터</a>\n",
+      "<li style=\"width:10%;\">\n",
+      "<a href=\"https://www.spc.co.kr/csr/right-mng/spc-operation/\" target=\"_blank\">\n",
+      "\t\t\t\t\t\t윤리신고센터\n",
+      "\t\t\t\t\t</a>\n",
       "</li>\n",
-      "<li style=\"width:12%;\">\n",
+      "<li style=\"width:9%;\">\n",
       "<a href=\"http://www.happypointcard.com/serviceCenter/term1.spc\" target=\"_blank\">\n",
       "\t\t\t\t\t\t이용약관\n",
       "\t\t\t\t\t</a>\n",
       "</li>\n",
-      "<li class=\"privacy\" style=\"width:15%;\">\n",
+      "<li class=\"privacy\" style=\"width:12%;\">\n",
       "<a href=\"/customer/policy.php\">\n",
       "\t\t\t\t\t\t개인정보처리방침\n",
       "\t\t\t\t\t</a>\n",
       "</li>\n",
-      "<li style=\"width:20%;\">\n",
+      "<li style=\"width:18%;\">\n",
       "<a href=\"/customer/policy_cctv.php\">\n",
       "\t\t\t\t\t\t영상정보처리기기운영관리방침\n",
       "\t\t\t\t\t</a>\n",
       "</li>\n",
-      "<li style=\"width:17%;\">\n",
+      "<li style=\"width:13%;\">\n",
+      "<a href=\"/customer/safety_management.php\">\n",
+      "\t\t\t\t\t\t안전보건 경영방침\n",
+      "\t\t\t\t\t</a>\n",
+      "</li>\n",
+      "<li style=\"width:14%;\">\n",
       "<a href=\"http://happy.spc.co.kr/\" target=\"_blank\">\n",
       "\t\t\t\t\t\t거래희망회사 사전등록\n",
       "\t\t\t\t\t</a>\n",
@@ -2979,7 +2953,7 @@
       "</div>\n",
       "\n",
       "</script>\n",
-      "<script src=\"https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js\"></script><script src=\"//dapi.kakao.com/v2/maps/sdk.js?appkey=906a9153ad6e35628650fe87777b93d4\"></script><script charset=\"UTF-8\" src=\"http://t1.daumcdn.net/mapjsapi/js/main/4.4.3/kakao.js\"></script><script src=\"/assets/js/swipe.js\"></script><script src=\"//ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js\"></script>\n",
+      "<script src=\"https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js\"></script><script src=\"//dapi.kakao.com/v2/maps/sdk.js?appkey=906a9153ad6e35628650fe87777b93d4\"></script><script charset=\"UTF-8\" src=\"http://t1.daumcdn.net/mapjsapi/js/main/4.4.5/kakao.js\"></script><script src=\"/assets/js/swipe.js\"></script><script src=\"//ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js\"></script>\n",
       "<!-- <script src=\"//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js\"></script> -->\n",
       "<script src=\"//code.jquery.com/ui/1.11.4/jquery-ui.js\"></script>\n",
       "<script src=\"/assets/js/baskinrobbins.js?v=20211117\"></script>\n",
@@ -3086,7 +3060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3157,7 +3131,19 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/51/xmc_l6t13wv1nc5z6qmyg58r0000gn/T/ipykernel_9528/1747692690.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0melement_sle_city\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mXPATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 도시별 검색\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpage_source\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# 전지역 검색\n",
     "storeName = []\n",
@@ -3167,13 +3153,13 @@
     "\n",
     "    element = driver.find_element(By.XPATH, '//*[@id=\"nform\"]/fieldset/p[1]/span[1]/select')\n",
     "    element.send_keys(city)\n",
-    "    time.sleep(2)\n",
+    "    time.sleep(3)\n",
     "\n",
     "    \n",
     "    xpath = '//*[@id=\"nform\"]/fieldset/div[2]/button'\n",
     "    element_sle_city = driver.find_element(By.XPATH, xpath).click() # 도시별 검색\n",
     "\n",
-    "    time.sleep(5)\n",
+    "    time.sleep(4)\n",
     "    \n",
     "    res = driver.page_source\n",
     "    soup = BeautifulSoup(res, \"html.parser\")\n",
