--- a/3.DataAnalysis/Note/18.서울시 범죄 안전도.ipynb
+++ b/3.DataAnalysis/Note/18.서울시 범죄 안전도.ipynb
@@ -4078,7 +4078,7 @@
    "metadata": {},
    "source": [
     "> CCTV가 많아 질수록 폭력성이 떨어져 검거율이 낮아진다     \n",
-    "> 고민 중\n"
+    "> 폭력검거율과 살인검거율이 높은 곳에 CCTV를 많이 설치하지 않는 경향이 있다\n"
    ]
   },
   {
@@ -4674,7 +4674,7 @@
     "tmp_max = crime_anal_norm['검거'].max()\n",
     "\n",
     "# 검거의 최대값을 100으로 설정하고 검거율 계산하기\n",
-    "crime_anal_norm['검거'] = crime_anal_norm['검거'] / 100\n",
+    "crime_anal_norm['검거'] = crime_anal_norm['검거'] / 100 # 최대값을 1로 설정하기 위함 - normalize\n",
     "\n",
     "# 검거율을 기준으로 정렬하기\n",
     "crime_anal_norm_sort = crime_anal_norm.sort_values(by='검거', ascending=False)\n",
