--- a/4.MachineLearning/Note/03.머신러닝 첫걸음.ipynb
+++ b/4.MachineLearning/Note/03.머신러닝 첫걸음.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        "[[0, 0, 0], [0, 1, 1], [1, 0, 1], [1, 1, 0]]"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "Name: 2, dtype: int64"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "1.0"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "4          5.0         3.6          1.4         0.2  Iris-setosa"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "max       7.900000    4.400000     6.900000    2.500000"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
        "4          5.0         3.6          1.4         0.2  Iris-setosa   red"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -573,29 +573,29 @@
      "output_type": "stream",
      "text": [
       "     SepalLength  SepalWidth  PetalLength  PetalWidth\n",
-      "56           6.3         3.3          4.7         1.6\n",
-      "74           6.4         2.9          4.3         1.3\n",
-      "19           5.1         3.8          1.5         0.3\n",
-      "100          6.3         3.3          6.0         2.5\n",
-      "145          6.7         3.0          5.2         2.3\n",
+      "44           5.1         3.8          1.9         0.4\n",
+      "99           5.7         2.8          4.1         1.3\n",
+      "24           4.8         3.4          1.9         0.2\n",
+      "33           5.5         4.2          1.4         0.2\n",
+      "140          6.7         3.1          5.6         2.4\n",
       "     SepalLength  SepalWidth  PetalLength  PetalWidth\n",
-      "123          6.3         2.7          4.9         1.8\n",
-      "65           6.7         3.1          4.4         1.4\n",
-      "88           5.6         3.0          4.1         1.3\n",
-      "106          4.9         2.5          4.5         1.7\n",
-      "8            4.4         2.9          1.4         0.2\n",
+      "89           5.5         2.5          4.0         1.3\n",
+      "51           6.4         3.2          4.5         1.5\n",
+      "87           6.3         2.3          4.4         1.3\n",
+      "119          6.0         2.2          5.0         1.5\n",
+      "142          5.8         2.7          5.1         1.9\n",
       "----------\n",
-      "56     Iris-versicolor\n",
-      "74     Iris-versicolor\n",
-      "19         Iris-setosa\n",
-      "100     Iris-virginica\n",
-      "145     Iris-virginica\n",
+      "44         Iris-setosa\n",
+      "99     Iris-versicolor\n",
+      "24         Iris-setosa\n",
+      "33         Iris-setosa\n",
+      "140     Iris-virginica\n",
       "Name: Name, dtype: object\n",
-      "123     Iris-virginica\n",
-      "65     Iris-versicolor\n",
-      "88     Iris-versicolor\n",
-      "106     Iris-virginica\n",
-      "8          Iris-setosa\n",
+      "89     Iris-versicolor\n",
+      "51     Iris-versicolor\n",
+      "87     Iris-versicolor\n",
+      "119     Iris-virginica\n",
+      "142     Iris-virginica\n",
       "Name: Name, dtype: object\n"
      ]
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "SVC()"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,15 +635,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Iris-virginica' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-setosa']\n"
+      "['Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-virginica'\n",
+      " 'Iris-virginica']\n"
      ]
     }
    ],
@@ -655,14 +655,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "정답률 : 0.9736842105263158\n"
+      "정답률 : 0.9210526315789473\n"
      ]
     }
    ],
@@ -674,16 +674,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9732142857142857"
+       "0.9821428571428571"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,16 +695,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9736842105263158"
+       "0.9210526315789473"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -725,13 +725,13 @@
      "text": [
       "                 precision    recall  f1-score   support\n",
       "\n",
-      "    Iris-setosa       1.00      1.00      1.00        17\n",
-      "Iris-versicolor       0.91      1.00      0.95        10\n",
-      " Iris-virginica       1.00      0.91      0.95        11\n",
+      "    Iris-setosa       1.00      1.00      1.00         9\n",
+      "Iris-versicolor       0.86      0.92      0.89        13\n",
+      " Iris-virginica       0.93      0.88      0.90        16\n",
       "\n",
-      "       accuracy                           0.97        38\n",
-      "      macro avg       0.97      0.97      0.97        38\n",
-      "   weighted avg       0.98      0.97      0.97        38\n",
+      "       accuracy                           0.92        38\n",
+      "      macro avg       0.93      0.93      0.93        38\n",
+      "   weighted avg       0.92      0.92      0.92        38\n",
       "\n"
      ]
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -753,14 +753,119 @@
        "array(['Iris-setosa'], dtype=object)"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 예측 해보기\n",
     "[4.1, 3.5, 1.4, 0.2]\n",
     "clf.predict([[4.1, 3.5, 1.4, 0.2]])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 분류 Report 이해하기"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "번호 : [1,   2,   3,   4,   5,   6]\n",
+    "정답 : [음치, 음치, 음치, 음치, 정상, 정상]\n",
+    "예측 : [음치, 음치, 정상, 정상, 정상, 정상]\n",
+    "\n",
+    "정확도 : 예측이 맞은 비율 ?\n",
+    "        1,2,5,6번은 맞추고 3,4번은 틀렸다. 6명중에서 4명을 맟췄으므로 4/6 = 2/3 = 0.66\n",
+    "정밀도 : 음치라고 예측한 사람들 중에 진짜 음치가 얼마나 있는가?\n",
+    "        내가 음치라고 예측한 1,2번이 둘다 음치가 맞았다. 2/2 = 1.0 (예측값 중심으로 타겟만 본다)\n",
+    "재현율 : 전체 음치중에 내가 맞춘 음치의 비율은?\n",
+    "        원래 음치가 4명 있는데 나는 그중에서 2명을 맞췄다. 2/4 = 0.5\n",
+    "F1 Score : 정밀도와 재현율의 평균\n",
+    "            2 * 정밀도 * 재현율 / (정밀도 + 재현율) = 2 * 1.0 * 0.5 / (1.0 + 0.5) = 0.66"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python Code로 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy : 0.6666666666666666\n",
+      "precision : 1.0\n",
+      "recall : 0.5\n",
+      "f1 Score : 0.6666666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 맞추고자 하는 target을 1로 한다\n",
+    "y = np.array([1,1,1,1,0,0])  # 1은 음치, 0은 정상\n",
+    "p = np.array([1,1,0,0,0,0])\n",
+    "\n",
+    "# 정확도 \n",
+    "accuracy = np.mean(np.equal(y, p))\n",
+    "print('accuracy :',accuracy)\n",
+    "\n",
+    "# 정밀도\n",
+    "right = np.sum(y * p == 1)\n",
+    "precision = right / np.sum(p)\n",
+    "print('precision :', precision)\n",
+    "\n",
+    "# 재현율\n",
+    "recall = right / np.sum(y)\n",
+    "print('recall :', recall)\n",
+    "\n",
+    "# f1 Score\n",
+    "f1 = 2 * precision * recall / (precision + recall)\n",
+    "print('f1 Score :', f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy : 0.6666666666666666\n",
+      "precision : 1.0\n",
+      "recall : 0.5\n",
+      "f1 Score : 0.6666666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('accuracy :', metrics.accuracy_score(y, p))\n",
+    "print('precision :', metrics.precision_score(y, p))\n",
+    "print('recall :', metrics.recall_score(y,p))\n",
+    "print('f1 Score :', metrics.f1_score(y, p))"
    ]
   },
   {
