[update] 2022/07/13 7/13 학습내용 업로드

--- a/4.MachineLearning/Note/09.랜덤포레스트.ipynb
+++ b/4.MachineLearning/Note/09.랜덤포레스트.ipynb
@@ -1408,7 +1408,7 @@
    ],
    "source": [
     "# 연습하기\n",
-    "pd.get_dummies(data=dataTemp, columns=[1], prefix='1')"
+    "pd.get_dummies(data=dataTemp, columns=[1], prefix='1') # 해당컬럼을 지워가면서 생성 1컬럼만 현재 생성"
    ]
   },
   {
@@ -1618,7 +1618,7 @@
    ],
    "source": [
     "for i in list(range(1,23)):\n",
-    "      dataTemp = pd.get_dummies(data = dataTemp, columns=[i], prefix=str(i))\n",
+    "      dataTemp = pd.get_dummies(data = dataTemp, columns=[i], prefix=str(i)) # columns = [i] 컬럼이름\n",
     "dataTemp.head()\n"
    ]
   },
@@ -1650,7 +1650,7 @@
     }
    ],
    "source": [
-    "# 학습하고 정확도\n",
+    "# 학습하고 정확도 확인\n",
     "clf.fit(X_train, y_train)\n",
     "clf.score(X_test, y_test)"
    ]
