[update] 2022/07/14 7/14 학습내용 업로드

--- a/4.MachineLearning/Note/13.knn_baseketball.ipynb
+++ b/4.MachineLearning/Note/13.knn_baseketball.ipynb
@@ -326,7 +326,7 @@
    ],
    "source": [
     "# 최적의 k를 찾기 위해 교차 검증을 수행할 k의 범위를 3부터 학습데이터의 절반까지 지정\n",
-    "max_k_range = train.shape[0]  // 2\n",
+    "max_k_range = train.shape[0] // 2\n",
     "max_k_range"
    ]
   },
@@ -434,14 +434,14 @@
     "\n",
     "for k in k_list:\n",
     "    knn = KNeighborsClassifier(n_neighbors=k)\n",
-    "    scores = cross_val_score(\n",
+    "    scores = cross_val_score( # 교차검증을 수행하지 모델 자체를 변경하지는 못해 k값에 따라 다시수행 필요\n",
     "        knn,\n",
     "        x_train,\n",
     "        y_train,\n",
     "        cv=10,    # cv : cross validation(교차검증 횟수)\n",
     "        scoring='accuracy'\n",
     "    )\n",
-    "    cross_validation_scores.append(scores.mean())\n",
+    "    cross_validation_scores.append(scores.mean()) # 교차검증 평균을 추가\n",
     "cross_validation_scores"
    ]
   },
