--- a/4.MachineLearning/Note/16.의사결정나무.ipynb
+++ b/4.MachineLearning/Note/16.의사결정나무.ipynb
@@ -230,7 +230,7 @@
    ],
    "source": [
     "# 레이블의 갯수 확인\n",
-    "train_df.label.value_counts()"
+    "train_df.label.value_counts()  # value_counts()"
    ]
   },
   {
