--- a/4.MachineLearning/Note/09.랜덤포레스트.ipynb
+++ b/4.MachineLearning/Note/09.랜덤포레스트.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "4          5.0         3.6          1.4         0.2  Iris-setosa"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "0.9210526315789473"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,24 +173,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[12  0  0]\n",
-      " [ 0 11  1]\n",
-      " [ 0  2 12]]\n",
+      "[[17  0  0]\n",
+      " [ 0  9  1]\n",
+      " [ 0  2  9]]\n",
       "                 precision    recall  f1-score   support\n",
       "\n",
-      "    Iris-setosa       1.00      1.00      1.00        12\n",
-      "Iris-versicolor       0.85      0.92      0.88        12\n",
-      " Iris-virginica       0.92      0.86      0.89        14\n",
+      "    Iris-setosa       1.00      1.00      1.00        17\n",
+      "Iris-versicolor       0.82      0.90      0.86        10\n",
+      " Iris-virginica       0.90      0.82      0.86        11\n",
       "\n",
       "       accuracy                           0.92        38\n",
-      "      macro avg       0.92      0.92      0.92        38\n",
+      "      macro avg       0.91      0.91      0.90        38\n",
       "   weighted avg       0.92      0.92      0.92        38\n",
       "\n"
      ]
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
        "4  e"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
        "1.0"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
        "array([120,  98, 115, 102, 107,  99])"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1401,7 @@
        "[8124 rows x 27 columns]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
        "[5 rows x 117 columns]"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1624,18 +1624,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(dataTemp,\n",
-    "                                                    mr2.iloc[:,0]                                       \n",
-    "                                                   )  # X:Feature, y:Target(label)"
+    "X_train, X_test, y_train, y_test = train_test_split(dataTemp,mr2.iloc[:,0])# X:Feature, y:Target(label) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1644,7 +1642,7 @@
        "1.0"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
